--- a/fruit3/style.css
+++ b/fruit3/style.css
@@ -16,3 +16,5 @@ This theme use SCSS, please check
     
 =========================================== 
 */
+
+/* Custom header background layout via fruit3 child theme */
