Update header gradient

--- a/fruit3/assets/css/style-d.css
+++ b/fruit3/assets/css/style-d.css
@@ -1,13 +1,11 @@
 .site-header {
-  display: flex;
-  align-items: center;
-  min-height: 80px;
-  background: linear-gradient(45deg,
-    #2A3288 0%,
-    #2A3288 35%,
-    #D0DF00 35%,
-    #D0DF00 37%,
-    #ffffff 37%,
+  background: linear-gradient(
+    45deg,
+    #2A3288 0,
+    #2A3288 calc(35% - 8px),
+    #D0DF00 calc(35% - 8px),
+    #D0DF00 calc(35% + 8px),
+    #ffffff calc(35% + 8px),
     #ffffff 100%
   );
 }
