--- a/plant3/assets/scss/style-d.scss
+++ b/plant3/assets/scss/style-d.scss
@@ -77,6 +77,22 @@
     padding: 0;
     gap: 20px;
     height: 100%;
+    > li > a {
+      position: relative;
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 0;
+        height: 2px;
+        background-color: var(--s-color-1);
+        transition: width .3s ease;
+      }
+      &:hover::after {
+        width: 100%;
+      }
+    }
     > li {
       &:hover {
         > .sub-menu {
