--- a/fruit3/assets/scss/style-m.scss
+++ b/fruit3/assets/scss/style-m.scss
@@ -12,6 +12,7 @@
     #ffffff calc(66% + 8px),
     #ffffff 100%
   );
+  box-shadow: var(--s-shadow-1);
 }
 
 @media (min-width: 720px) {
@@ -29,6 +30,7 @@
       #ffffff calc(35% + 8px),
       #ffffff 100%
     );
+    box-shadow: var(--s-shadow-1);
   }
 }
 
