Fix nav underline position

--- a/fruit3/assets/scss/style-d.scss
+++ b/fruit3/assets/scss/style-d.scss
@@ -1,6 +1,7 @@
 // Desktop navigation underline hover effect
 .s-nav > li > a {
   position: relative;
+  height: auto;
   &::after {
     content: '';
     position: absolute;
