Update gradient colors in site header styles

--- a/fruit3/assets/css/style-m.css
+++ b/fruit3/assets/css/style-m.css
@@ -6,8 +6,8 @@
     45deg,
     #2A3288 0,
     #2A3288 calc(66% - 8px),
-    #D0DF00 calc(66% - 8px),
-    #D0DF00 calc(66% + 8px),
+    #B8D134 calc(66% - 8px),
+    #B8D134 calc(66% + 8px),
     #ffffff calc(66% + 8px),
     #ffffff 100%
   );
@@ -24,8 +24,8 @@
       45deg,
       #2A3288 0,
       #2A3288 calc(35% - 8px),
-      #D0DF00 calc(35% - 8px),
-      #D0DF00 calc(35% + 8px),
+      #B8D134 calc(35% - 8px),
+      #B8D134 calc(35% + 8px),
       #ffffff calc(35% + 8px),
       #ffffff 100%
     );
