--- a/fruit3/assets/css/style-d.css
+++ b/fruit3/assets/css/style-d.css
@@ -3,8 +3,8 @@
     45deg,
     #2A3288 0,
     #2A3288 calc(35% - 8px),
-    #D0DF00 calc(35% - 8px),
-    #D0DF00 calc(35% + 8px),
+    #B8D134 calc(35% - 8px),
+    #B8D134 calc(35% + 8px),
     #ffffff calc(35% + 8px),
     #ffffff 100%
   );
