--- a/fruit3/assets/scss/style-d.scss
+++ b/fruit3/assets/scss/style-d.scss
@@ -230,6 +230,7 @@
 }
 
 .nav-panel.-dropdown.active {
+  display: block;
   max-height: var(--dropdown-height);
   opacity: 1;
   box-shadow: var(--s-shadow-1);
