--- a/fruit3/assets/css/style-m.css
+++ b/fruit3/assets/css/style-m.css
@@ -39,7 +39,7 @@
 
 .nav-panel.-dropdown {
   display: none;
-  position: absolute;
+  position: fixed;
   top: var(--s-head-height);
   left: 0;
   right: 0;
@@ -48,6 +48,7 @@
   overflow: hidden;
   padding: 0 var(--s-space);
   opacity: 0;
+  z-index: 8000;
   transition: max-height 0.4s cubic-bezier(.4,0,.2,1), opacity 0.3s ease;
   background-color: var(--s-nav-bg);
 }
