--- a/fruit3/assets/css/style-m.css
+++ b/fruit3/assets/css/style-m.css
@@ -121,6 +121,7 @@
   margin: 0 auto;
   --s-head-text: var(--s-color-2);
   --s-head-hover: var(--s-color-1);
+  --s-nav-text: var(--s-color-2);
 }
 
 @media (min-width: 768px) {
@@ -149,6 +150,7 @@
   max-width: calc(100% - 32px);
   --s-head-text: #fff;
   --s-head-hover: #fff;
+  --s-nav-text: #fff;
   margin: 0 auto;
   transition: all 0.3s ease;
 }
