--- a/fruit3/assets/scss/style-m.scss
+++ b/fruit3/assets/scss/style-m.scss
@@ -245,12 +245,14 @@
   border-radius: var(--floating-radius);
   --s-head-text: var(--s-color-2);
   --s-head-hover: var(--s-color-1);
+  --s-nav-text: var(--s-color-2);
 }
 
 .header--floating.header--blur {
   @include floating-header-blur();
   --s-head-text: #fff;
   --s-head-hover: #fff;
+  --s-nav-text: #fff;
 }
 
 .header--floating.header--solid {
