Clarify mobile dropdown comment

--- a/fruit3/assets/scss/style-m.scss
+++ b/fruit3/assets/scss/style-m.scss
@@ -311,7 +311,7 @@
     text-align: center;
   }
 }
-
+// Dropdown card when the header is not floating
 @media (max-width: 768px) {
   .nav-panel.-dropdown {
     position: fixed;
